Connect Flask to MongoDB

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -6,12 +6,12 @@
     <title>Technologies</title>
 </head>
 <body>
-    {% for tech in technologies %}
-        {{ tech.category_name }}<br>
-        {{ tech.technology_name }}<br>
-        {{ tech.technology_description }}<br>
-        {{ tech.post_date }}<br>
-        {{ tech.posted_by }}<br>
+    {% for technology in technologies %}
+        {{ technology.category_name }}<br>
+        {{ technology.technology_name }}<br>
+        {{ technology.technology_description }}<br>
+        {{ technology.post_date }}<br>
+        {{ technology.posted_by }}<br>
     {% endfor %}
 </body>
 </html>
