--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technologies</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     {% for technology in technologies %}
         {{ technology.category_name }}<br>
         {{ technology.technology_name }}<br>
@@ -13,5 +7,5 @@
         {{ technology.post_date }}<br>
         {{ technology.posted_by }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock  %}
