--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
 					<li><a href="{{ url_for('get_technologies') }}">Home</a></li>
 					<li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
 					<li><a href="#">Add a Technology</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
 					<li><a href="#">Manage Categories</a></li>
 					<li><a href="#">Log Out</a></li>
 					<li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -37,6 +38,7 @@
             <li><a href="{{ url_for('get_technologies') }}">Home</a></li>
             <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
             <li><a href="#">New Task</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="#">Manage Categories</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="{{ url_for('login') }}">Log In</a></li>
