--- a/templates/base.html
+++ b/templates/base.html
@@ -22,12 +22,15 @@
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_technologies') }}">Home</a></li>
 					<li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
-					<li><a href="#">Add a Technology</a></li>
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-					<li><a href="#">Manage Categories</a></li>
-					<li><a href="#">Log Out</a></li>
-					<li><a href="{{ url_for('login') }}">Log In</a></li>
-					<li><a href="{{ url_for('registration') }}">Register</a></li>
+                    {% if session.user %}
+					    <li><a href="#">Add a Technology</a></li>
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+					    <li><a href="#">Manage Categories</a></li>
+					    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+					    <li><a href="{{ url_for('login') }}">Log In</a></li>
+					    <li><a href="{{ url_for('registration') }}">Register</a></li>
+                    {% endif%}
 				</ul>
 			</div>
 		</nav>
@@ -37,10 +40,15 @@
             <li><h4 class="center-align light-blue-text text-darken 4">Technostalgia</h4></li>
             <li><a href="{{ url_for('get_technologies') }}">Home</a></li>
             <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
-            <li><a href="#">New Task</a></li>
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-            <li><a href="#">Manage Categories</a></li>
-            <li><a href="#">Log Out</a></li>
+            {% if session.user %}
+					    <li><a href="#">Add a Technology</a></li>
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+					    <li><a href="#">Manage Categories</a></li>
+					    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+					    <li><a href="{{ url_for('login') }}">Log In</a></li>
+					    <li><a href="{{ url_for('registration') }}">Register</a></li>
+                    {% endif%}
             <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="{{ url_for('registration') }}">Register</a></li>
 		</ul>
