--- a/templates/registration.html
+++ b/templates/registration.html
@@ -10,8 +10,7 @@
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
-						<input id="first_name" name="first_name" type="text" minlength="4"
-                            maxlength="20" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "First Name, minimum 4 characters, letters only" required>
+						<input id="first_name" name="first_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "First Name,  4-20 letters only" required>
 						<label for="first_name">First name</label>
 					</div>
                 </div>
@@ -19,8 +18,7 @@
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
-						<input id="last_name" name="last_name" type="text" minlength="4"
-                            maxlength="20" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "Last Name, minimum 4 characters, letters only"required>
+						<input id="last_name" name="last_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "Last Name, 4-20 letters only"required>
 						<label for="last_name">Last name</label>
 					</div>
                 </div>
@@ -36,8 +34,7 @@
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
-						<input id="username" name="username" type="text" minlength="4"
-                            maxlength="20" pattern="^[a-zA-Z0-9]{4,15}$" class="validate" placeholder = "username, minimum 4 characters, only alphanumeric characters allowed" required>
+						<input id="username" name="username" type="text" pattern="^[a-zA-Z0-9]{4,20}$" class="validate" placeholder = "username, 4-20 alphanumeric characters allowed" required>
 						<label for="username">Username</label>
 					</div>
                 </div>
