--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@
         <!-- top navbar -->
 		<nav class="nav-extended text-shadow light-blue darken-1">
 			<div class="nav-wrapper">
-				<a href="{{ url_for('get_technologies') }}" class="brand-logo">Technostalgia</a>
+				<a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
 				<ul class="right hide-on-med-and-down">
-					<li><a href="{{ url_for('get_technologies') }}">Home</a></li>
+					<li><a href="{{ url_for('home') }}">Home</a></li>
 					<li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
                     {% if session.user %}
 					    <li><a href="#">Add a Technology</a></li>
@@ -38,7 +38,7 @@
         <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken 4">Technostalgia</h4></li>
-            <li><a href="{{ url_for('get_technologies') }}">Home</a></li>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
             {% if session.user %}
 					    <li><a href="#">Add a Technology</a></li>
