--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-    {% for technology in technologies %}
-        {{ technology.category_name }}<br>
-        {{ technology.technology_name }}<br>
-        {{ technology.technology_description }}<br>
-      
-    {% endfor %}
+
+<h1 class="center-align">Technostalgia</h1>
+    
+    <div class="carousel">
+        <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+        <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+        <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+        <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+        <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+      </div>
 
 {% endblock  %}
