--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -8,4 +8,40 @@
         {{ technology.posted_by }}<br>
     {% endfor %}
 
+    <div class="col s12 m7">
+        <h2 class="header">Horizontal Card</h2>
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="https://lorempixel.com/100/190/nature/6">
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+                <span class="card-title">Card Title</span>
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+             
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 md7">1</div>
+        <div class="col s5">2</div>
+       
+      </div>
+
+      <div class="row">
+        <div class="col s8 push-s4"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div>
+        <div class="col s5 pull-s7"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
+      </div>
+      
+     
+      <div class="row">
+        <div class="col s4 push-s8"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div>
+        <div class="col s8 pull-s4"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
+      </div>
+      
+
+
 {% endblock  %}
