--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="center-align">Technostalgia</h1>
+<h1 class="center-align">{{ page_title }}</h1>
     
     <div class="carousel">
         <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
