--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Log In</h3>
+<h1 class="center-align">{{ page_title }}</h1>
+
+<h3 class="center-align">Log In</h3>
 
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
