--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
+
+<h1 class="center-align">{{ page_title }}</h1>
+
 {% block content %}
+
+<h1 class="center-align">{{ page_title }}</h1>
     {% for technology in technologies %}
         {{ technology.category_name }}<br>
         {{ technology.technology_name }}<br>
