--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-<h1 class="center-align">{{ page_title }}</h1>
 
 {% block content %}
 
+{{ technologies[0]["technology_name"]}}
 <h1 class="center-align">{{ page_title }}</h1>
     {% for technology in technologies %}
         {{ technology.category_name }}<br>
