--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -4,49 +4,33 @@
 {% block content %}
 
 {{ technologies[0]["technology_name"]}}
-<h1 class="center-align">{{ page_title }}</h1>
-    {% for technology in technologies %}
-        {{ technology.category_name }}<br>
-        {{ technology.technology_name }}<br>
-        {{ technology.technology_description }}<br>
-        {{ technology.post_date }}<br>
-        {{ technology.posted_by }}<br>
-    {% endfor %}
 
-    <div class="col s12 m7">
-        <h2 class="header">Horizontal Card</h2>
-        <div class="card horizontal">
-          <div class="card-image">
-            <img src="https://lorempixel.com/100/190/nature/6">
+
+{% for technology in technologies %}
+  <div class="col s12 m7">
+    <h2 class="header">Horizontal Card</h2>
+      <div class="card horizontal">
+        <div class="card-image">
+        <img src="https://lorempixel.com/100/190/nature/6">
+        </div>
+        <div class="card-stacked">
+          <div class="card-content">
+            <ul>
+              <li>{{ technology.technology_name }}</li><br>
+              <li>{{ technology.technology_description }}</li><br>
+              <li>{{ technology.post_date }}</li><br> 
+              <li>{{ technology.posted_by }}</li><br>
+            </ul>
           </div>
-          <div class="card-stacked">
-            <div class="card-content">
-                <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.</p>
-             
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
+          <div class="card-action">
+            <a href="#">See all comments about this {{ technology.category_name}} </a>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col s12 md7">1</div>
-        <div class="col s5">2</div>
-       
-      </div>
+  </div>
+{% endfor %} 
 
-      <div class="row">
-        <div class="col s8 push-s4"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div>
-        <div class="col s5 pull-s7"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
-      </div>
-      
-     
-      <div class="row">
-        <div class="col s4 push-s8"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div>
-        <div class="col s8 pull-s4"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
-      </div>
-      
+
 
 
 {% endblock  %}
