Add functionality for carousel on home page

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -15,6 +15,8 @@
           <li>Category: {{ technology.category_name }}</li><br>
           <li>Name: {{ technology.technology_name }}</li><br>
           <li>Description: {{ technology.technology_description }}</li><br>
+          <li>Best Bits: {{ technology.best_bits }}</li><br>
+          <li>Description: {{ technology.worst_bits }}</li><br>
           <li>Posted by: {{ technology.posted_by }}</li><br>
           <li>Posted on: {{ technology.post_date }}</li><br> 
         </ul>
