--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     <header>
         <!-- top navbar -->
-		<nav class="nav-extended text-shadow light-blue darken-1">
+		<nav class="nav-extended text-shadow orange darken-3">
 			<div class="nav-wrapper">
 				<a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
@@ -50,6 +50,7 @@
 					    <li><a href="{{ url_for('registration') }}">Register</a></li>
                     {% endif%}
 		</ul>
+        <h1 class="center-align page-topper">Technostalgia</h1>
 	</header>
 
     <section>
