--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -13,16 +13,16 @@
       <div class="card-content">
         <ul>
           <li>Category: {{ technology.category_name }}</li><br>
-          <li>Name: {{ technology.technology_name }}</li><br>
-          <li>Description: {{ technology.technology_description }}</li><br>
-          <li>Best Bits: {{ technology.best_bits }}</li><br>
-          <li>Description: {{ technology.worst_bits }}</li><br>
-          <li>Posted by: {{ technology.posted_by }}</li><br>
-          <li>Posted on: {{ technology.post_date }}</li><br> 
+          <li>Name: {{ technology.technology_name }}</li>
+          <li>Description: {{ technology.technology_description }}</li>
+          <li>Best Bits: {{ technology.best_bits }}</li>
+          <li>Description: {{ technology.worst_bits }}</li>
+          <li>Posted by: {{ technology.posted_by }}</li>
+          <li>Posted on: {{ technology.post_date }}</li>
         </ul>
       </div>
       <div class="card-action">
-            <a href="#">See all post about {{ technology.category_name}} technologies </a>
+            <a href="#">See all comments about {{ technology.category_name}} </a>
       </div>
       </div>
     </div>
