--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,7 +9,7 @@
                 <!-- first_name -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
 						<input id="first_name" name="first_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "First Name,  4-20 letters only" required>
 						<label for="first_name">First name</label>
 					</div>
@@ -17,7 +17,7 @@
                 <!-- last_name -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
 						<input id="last_name" name="last_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "Last Name, 4-20 letters only"required>
 						<label for="last_name">Last name</label>
 					</div>
@@ -25,7 +25,7 @@
                 <!-- email -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
 						<input id="email" name="email" type="email" class="validate" placeholder = "Email address" required>
 						<label for="email">Email</label>
 					</div>
@@ -33,7 +33,7 @@
                 <!-- username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
 						<input id="username" name="username" type="text" pattern="^[a-zA-Z0-9]{4,20}$" class="validate" placeholder = "username, 4-20 alphanumeric characters allowed" required>
 						<label for="username">Username</label>
 					</div>
@@ -41,7 +41,7 @@
                 <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
                         
                         <input id="password" name="password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
@@ -51,7 +51,7 @@
                  <!-- confirm_password -->
                  <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
                         
                         <input id="confirm_password" name="confirm_password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
@@ -61,7 +61,7 @@
 
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
+                    <button type="submit" class="col s12 btn-large orange darken-3 text-shadow">
                         Register <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
