--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -15,14 +15,14 @@
           <li>Category: {{ technology.category_name }}</li><br>
           <li>Name: {{ technology.technology_name }}</li>
           <li>Description: {{ technology.technology_description }}</li>
-          <li>Best Bits: {{ technology.best_bits }}</li>
-          <li>Description: {{ technology.worst_bits }}</li>
+          <li>Best bits: {{ technology.best_bits }}</li>
+          <li>Worst bits: {{ technology.worst_bits }}</li>
           <li>Posted by: {{ technology.posted_by }}</li>
-          <li>Posted on: {{ technology.post_date }}</li>
+          <li>Posted: {{ technology.post_date }}</li>
         </ul>
       </div>
       <div class="card-action">
-            <a href="#">See all comments about {{ technology.category_name}} </a>
+            <a href="#">See all {{ technology.category_name}} comments</a>
       </div>
       </div>
     </div>
