--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
                 <!-- username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-cog prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-cog prefix orange-text text-darken-3"></i>
 						<input id="username" name="username" type="text" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
 						<label for="username">Username</label>
@@ -19,7 +19,7 @@
                 <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
+						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
                         
                         <input id="password" name="password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
@@ -39,8 +39,8 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                New Here?
-                <a href="{{ url_for('registration') }}" class="light-blue-text text-darken-4">Register Account</a>
+                Not registered yet?
+                <a href="{{ url_for('registration') }}" class="orange-text text-darken-3">Register Here</a>
             </p>
         </div>
     </div>
