--- a/templates/login.html
+++ b/templates/login.html
@@ -3,11 +3,10 @@
 
 <h1 class="center-align">{{ page_title }}</h1>
 
-
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
-                <!-- username -->
+                <!-- input element for username -->
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-cog prefix orange-text text-darken-3"></i>
@@ -16,7 +15,7 @@
 						<label for="username">Username</label>
 					</div>
                 </div>
-                <!-- password -->
+                <!-- input element for password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
@@ -26,7 +25,7 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- register -->
+                <!-- Submit button got loggin in -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large orange darken-3 text-shadow">
                         Log In <i class="fas fa-sign-in-alt"></i>
