--- a/templates/registration.html
+++ b/templates/registration.html
@@ -6,7 +6,7 @@
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('registration') }}">
             <div class="card-panel">
-                <!-- first_name -->
+                <!-- input element for first name -->
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
@@ -14,7 +14,7 @@
 						<label for="first_name">First name</label>
 					</div>
                 </div>
-                <!-- last_name -->
+                <!-- input element for last name -->
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
@@ -22,7 +22,7 @@
 						<label for="last_name">Last name</label>
 					</div>
                 </div>
-                <!-- email -->
+                <!-- input element for email address -->
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
@@ -30,7 +30,7 @@
 						<label for="email">Email</label>
 					</div>
                 </div>
-                <!-- username -->
+                <!-- input element for username -->
                 <div class="row">
 					<div class="input-field col s12">
 						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
@@ -38,7 +38,7 @@
 						<label for="username">Username</label>
 					</div>
                 </div>
-                <!-- password -->
+                <!-- input element for password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
@@ -48,7 +48,7 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                 <!-- confirm_password -->
+                 <!-- input element to confirm password -->
                  <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <!-- register -->
+                <!-- Submit button for registration -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large orange darken-3 text-shadow">
                         Register <i class="fas fa-sign-in-alt"></i>
