--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -3,6 +3,30 @@
 
 {% block content %}
 
+<h2>You can browse all  technologies or browse  by category</h2>
+
+
+ <!-- code from Materialize.com for radiobuttons to select category to browse -->
+ <form action="#">
+  <p>
+    <label>
+      <input class="with-gap" name="catogory" type="radio" checked />
+      <span>All</span>
+    </label>
+  </p>
+  {% for category in categories %}
+  <p>
+    <label>
+      <input class="with-gap" name="category" type="radio" />
+      <span>{{ category.category_name }}</span>
+    </label>
+  </p>
+ {% endfor %}
+  
+</form>
+      
+
+
 {% for technology in technologies %}
   <div class="col s12 m7">
     <div class="card horizontal small">
