--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- Submit button got loggin in -->
+                <!-- Submit button log in -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large orange darken-3 text-shadow">
                         Log In <i class="fas fa-sign-in-alt"></i>
