Add materialze icons to user forms

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -25,10 +25,10 @@
   
 </form>
       
-
+<!-- code from Materialize.com for cards -->
 {% for technology in technologies %}
   <div class="col s12 m7">
-    <div class="card horizontal small">
+    <div class="card horizontal small hoverable">
       <div class="card-image">
       <img src="{{ technology.technology_image }}" alt="" >
       </div>
