--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
                 <!-- input element for username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-cog prefix orange-text text-darken-3"></i>
+						<i class="material-icons prefix orange-text text-darken-3">face</i>
 						<input id="username" name="username" type="text" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
 						<label for="username">Username</label>
@@ -18,8 +18,7 @@
                 <!-- input element for password -->
                 <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
-                        
+						<i class="material-icons prefix orange-text text-darken-3">lock</i>
                         <input id="password" name="password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
