--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,7 +9,7 @@
                 <!-- input element for first name -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
+                        <i class="material-icons prefix orange-text text-darken-3">person_add</i>
 						<input id="first_name" name="first_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "First Name,  4-20 letters only" required>
 						<label for="first_name">First name</label>
 					</div>
@@ -17,7 +17,7 @@
                 <!-- input element for last name -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
+						<i class="material-icons prefix orange-text text-darken-3">person_add</i>
 						<input id="last_name" name="last_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "Last Name, 4-20 letters only"required>
 						<label for="last_name">Last name</label>
 					</div>
@@ -25,7 +25,7 @@
                 <!-- input element for email address -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
+						<i class="material-icons prefix orange-text text-darken-3">mail</i>
 						<input id="email" name="email" type="email" class="validate" placeholder = "Email address" required>
 						<label for="email">Email</label>
 					</div>
@@ -33,7 +33,7 @@
                 <!-- input element for username -->
                 <div class="row">
 					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix orange-text text-darken-3"></i>
+						<i class="material-icons prefix orange-text text-darken-3">face</i>
 						<input id="username" name="username" type="text" pattern="^[a-zA-Z0-9]{4,20}$" class="validate" placeholder = "username, 4-20 alphanumeric characters allowed" required>
 						<label for="username">Username</label>
 					</div>
@@ -41,8 +41,7 @@
                 <!-- input element for password -->
                 <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
-                        
+						<i class="material-icons prefix orange-text text-darken-3">lock</i>
                         <input id="password" name="password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
@@ -51,8 +50,7 @@
                  <!-- input element to confirm password -->
                  <div class="row">
                     <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix orange-text text-darken-3"></i>
-                        
+						<i class="material-icons prefix orange-text text-darken-3">lock</i>
                         <input id="confirm_password" name="confirm_password" type="password" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="confirm_password">Confirm Password</label>
