--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -7,16 +7,28 @@
 <!-- Code for form from  https://materializecss.com/ -->
 <div class="row">
     <form class="col s12" method="POST" action="">
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="fas fa-user-circle prefix orange-text text-darken-3"></i>
-                <input id="icon_prefix" type="text" class="validate">
-                <label for="icon_prefix">First Name</label>
+        <div class="card-panel">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">important_devices</i>
+                    <input id="technology_name" name="technology_name" maxlength="75" type="text" class="validate" placeholder="Name" required>
+                    <label for="technology_name">Technology's name</label>
+                </div>
             </div>
-            <div class="input-field col s12">
-                <i class="fas fa-phone prefix orange-text text-darken-3"></i>
-                <input id="icon_telephone" type="tel" class="validate">
-                <label for="icon_telephone">Telephone</label>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">camera_alt</i>
+                    <input id="technology_image" name="technology_image" type="text" class="validate" placeholder="Important! Must be a url" required>
+                    <label for="technology_image">Technology's Image</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">description</i>
+                    <textarea id="technology_description" name="technology_description" minlength="5"
+                        maxlength="200" placeholder="Brief desciption, lessthan 200 characters!" class="materialize-textarea validate" required></textarea>
+                    <label for="technology_description">Description</label>
+                </div>
             </div>
         </div>
     </form>
