--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h2>You can browse all  technologies or browse  by category</h2>
+<h2>You can browse all  technologies or select a category</h2>
 
 
  <!-- code from Materialize.com for radiobuttons to select category to browse -->
@@ -40,7 +40,7 @@
           <li>Description: {{ technology.technology_description }}</li>
           <li>Best bits: {{ technology.best_bits }}</li>
           <li>Worst bits: {{ technology.worst_bits }}</li>
-          <li>Posted by: {{ technology.posted_by }}</li>
+          <li>Added by: {{ technology.posted_by }}</li>
           <li>Posted: {{ technology.post_date }}</li>
         </ul>
       </div>
