--- a/templates/login.html
+++ b/templates/login.html
@@ -24,10 +24,10 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- Submit button log in -->
+                <!-- Submit button for log in -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large orange darken-3 text-shadow">
-                        Log In <i class="fas fa-sign-in-alt"></i>
+                    <button type="submit" class="col s12 btn-large orange darken-3">
+                        Log In <i class="material-icons prefix white-text">forward</i>
                     </button>
                 </div>
             </div>
