--- a/templates/registration.html
+++ b/templates/registration.html
@@ -60,7 +60,7 @@
                 <!-- Submit button for registration -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large orange darken-3 text-shadow">
-                        Register <i class="fas fa-sign-in-alt"></i>
+                        Register <i class="material-icons prefix white-text">forward</i>
                     </button>
                 </div>
             </div>
