Correct bug that stopped sidenav displaying - was icon

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 		<nav class="nav-extended text-shadow orange darken-3">
 			<div class="nav-wrapper">
 				<a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
-				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons prefix orange-text text-darken-3">dehaze</i></i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('home') }}">Home</a></li>
 					<li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
@@ -50,7 +50,7 @@
 					    <li><a href="{{ url_for('registration') }}">Register</a></li>
                     {% endif%}
 		</ul>
-        <h1 class="center-align page-topper">Technostalgia</h1>
+       
 	</header>
 
     <section>
