--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+<h1 class="center-align page-topper">Technostalgia</h1>
 <h3 class="center-align">A place to come and reminisce about technologies that have been loved and lost, but not forgotten.</h3>
 
 
@@ -12,9 +14,9 @@
 </div>
 
 
-<div class="row">
+<div class="row home-page-links">
   <div class="col s4 offset 1 center-align">
-        <p>Feel free to browse  the technologies</p>
+        <p>Feel free to just browse  the technologies</p>
   </div>
 
   <div class="col s2 center-align">
