--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
 
-            <!-- Dropdown for picking a technology's category -->
+<!-- Dropdown for picking a technology's category -->
             <div class="row">
 				<div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">list</i>
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 
-            <!-- Input for adding a technology image -->
+<!-- Input for adding a technology image -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">camera_alt</i>
@@ -40,41 +40,44 @@
                     <label for="technology_image">Technology's Image</label>
                 </div>
             </div>
-             <!-- Input for adding a technology description -->
+<!-- Input for adding a technology description -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix orange-text text-darken-3">description</i>
                     <textarea id="technology_description" name="technology_description" minlength="5"
-                        maxlength="200" placeholder="Brief desciption, lessthan 200 characters!" class="materialize-textarea validate" required></textarea>
+                        maxlength="" placeholder="Brief desciption, lessthan 200 characters!" class="materialize-textarea validate" required></textarea>
                     <label for="technology_description">Description</label>
                 </div>
             </div>
- <!-- Input for adding a best bits about the technology -->
+
+<!-- Input for adding a best bits about the technology -->
  <div class="row">
     <div class="input-field col s12">
         <i class="material-icons prefix orange-text text-darken-3">thumb_up</i>
         <textarea id="best_bits" name="best_bits" minlength="5"
-            maxlength="200" placeholder="What do you love most about this?" class="materialize-textarea validate" required></textarea>
-        <label for="best_bits">Best thing about this</label>
+            maxlength="200" placeholder="What do you love most about this technology?" class="materialize-textarea validate" required></textarea>
+        <label for="best_bits">Best bits</label>
     </div>
 </div> 
+
 <!-- Input for adding worst bits about the technology -->
 <div class="row">
     <div class="input-field col s12">
         <i class="material-icons prefix orange-text text-darken-3">thumb_down</i>
         <textarea id="worst_bits" name="worst_bits" minlength="5"
-            maxlength="200" placeholder="What annoyed most about this?" class="materialize-textarea validate" required></textarea>
-        <label for="worst_bits">Worst thing about this</label>
+            maxlength="200" placeholder="What do you NOT love about this technology?" class="materialize-textarea validate" required></textarea>
+        <label for="worst_bits">Worst bits</label>
     </div>
 </div> 
-             <!-- Submit button for adding a technology -->
+
+<!-- Submit button for adding a technology -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
 
-                <button type="submit" class="btn-large waves-effect waves-light orange darken-3 text-shadow">
+                <button type="submit" class="btn-large waves-effect waves-light orange darken-3">
                         Add this technology now! <i class="material-icons right">add_circle_outline</i>
                     </button>
-                    
+                                       
                 </div>
             </div>
         </div>
