--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,9 @@
 <body>
 
     <header>
-        <!-- main navbar using materialize classes -->
-		<nav class="nav-extended text-shadow orange darken-3">
+
+<!-- Main navbar using Materialize.com  -->
+		<nav class="nav-extended orange darken-3">
 			<div class="nav-wrapper">
 				<a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons prefix orange-text text-darken-3">dehaze</i></i></a>
@@ -34,14 +35,13 @@
 			</div>
 		</nav>
 
-        <!--collapsed navbar to left side using materialize -->
+<!--Collapsed navbar to left side using Materialize.com -->
 		<ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align">Technostalgia</h4></li>
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
             {% if session.user %}
-					    <li><a href="#">Add a Technology</a></li>
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+					    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                         <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
 					    <li><a href="#">Manage Categories</a></li>
 					    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
@@ -54,7 +54,8 @@
 	</header>
 
     <section>
-        <!-- flash messages -->
+
+<!-- Place to display flash messages -->
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
