--- a/templates/login.html
+++ b/templates/login.html
@@ -3,44 +3,47 @@
 
 <h1 class="center-align">{{ page_title }}</h1>
 
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
-            <div class="card-panel">
-                <!-- input element for username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="material-icons prefix orange-text text-darken-3">face</i>
-						<input id="username" name="username" type="text" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-						<label for="username">Username</label>
-					</div>
-                </div>
-                <!-- input element for password -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="material-icons prefix orange-text text-darken-3">lock</i>
-                        <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <!-- Submit button for log in -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large orange darken-3">
-                        Log In <i class="material-icons prefix white-text">forward</i>
-                    </button>
+<div class="row">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
+        <div class="card-panel">
+
+<!-- Input element for username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">face</i>
+                    <input id="username" name="username" type="text" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="username">Username</label>
                 </div>
             </div>
-        </form>
-    </div>
 
-    <div class="row">
-        <div class="col s12">
-            <p class="center-align">
-                Not registered yet?
-                <a href="{{ url_for('registration') }}" class="orange-text text-darken-3">Register Here</a>
-            </p>
+<!-- Input element for password -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">lock</i>
+                    <input id="password" name="password" type="password" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="password">Password</label>
+                </div>
+            </div>
+
+<!-- Submit button for log in -->
+            <div class="row">
+                <button type="submit" class="col s12 btn-large orange darken-3">
+                    Log In <i class="material-icons prefix white-text">forward</i>
+                </button>
+            </div>
         </div>
+    </form>
+</div>
+
+<div class="row">
+    <div class="col s12">
+        <p class="center-align">
+            Not registered yet?
+            <a href="{{ url_for('registration') }}" class="orange-text text-darken-4">Register Here</a>
+        </p>
     </div>
+</div>
 
 {% endblock %}
