--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,77 +3,86 @@
 
 <h1 class="center-align">{{ page_title }}</h1>
 
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('registration') }}">
-            <div class="card-panel">
-                <!-- input element for first name -->
-                <div class="row">
-					<div class="input-field col s12">
-                        <i class="material-icons prefix orange-text text-darken-3">person_add</i>
-						<input id="first_name" name="first_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "First Name,  4-20 letters only" required>
-						<label for="first_name">First name</label>
-					</div>
-                </div>
-                <!-- input element for last name -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="material-icons prefix orange-text text-darken-3">person_add</i>
-						<input id="last_name" name="last_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate" placeholder = "Last Name, 4-20 letters only"required>
-						<label for="last_name">Last name</label>
-					</div>
-                </div>
-                <!-- input element for email address -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="material-icons prefix orange-text text-darken-3">mail</i>
-						<input id="email" name="email" type="email" class="validate" placeholder = "Email address" required>
-						<label for="email">Email</label>
-					</div>
-                </div>
-                <!-- input element for username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="material-icons prefix orange-text text-darken-3">face</i>
-						<input id="username" name="username" type="text" pattern="^[a-zA-Z0-9]{4,20}$" class="validate" placeholder = "username, 4-20 alphanumeric characters allowed" required>
-						<label for="username">Username</label>
-					</div>
-                </div>
-                <!-- input element for password -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="material-icons prefix orange-text text-darken-3">lock</i>
-                        <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                 <!-- input element to confirm password -->
-                 <div class="row">
-                    <div class="input-field col s12">
-						<i class="material-icons prefix orange-text text-darken-3">lock</i>
-                        <input id="confirm_password" name="confirm_password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="confirm_password">Confirm Password</label>
-                    </div>
-                </div>
+<div class="row">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('registration') }}">
+        <div class="card-panel">
 
-                <!-- Submit button for registration -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large orange darken-3 text-shadow">
-                        Register <i class="material-icons prefix white-text">forward</i>
-                    </button>
+<!-- Input element for first name -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">person_add</i>
+                    <input id="first_name" name="first_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate"
+                        placeholder="First Name,  4-20 letters only" required>
+                    <label for="first_name">First name</label>
                 </div>
             </div>
-        </form>
-    </div>
 
-    <div class="row">
-        <div class="col s12">
-            <p class="center-align">
-                Already Registered?
-                <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
-            </p>
+<!-- Input element for last name -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">person_add</i>
+                    <input id="last_name" name="last_name" type="text" pattern="^[a-zA-Z]{4,20}$" class="validate"
+                        placeholder="Last Name, 4-20 letters only" required>
+                    <label for="last_name">Last name</label>
+                </div>
+            </div>
+
+<!-- Input element for email address -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">mail</i>
+                    <input id="email" name="email" type="email" class="validate" placeholder="Email address" required>
+                    <label for="email">Email</label>
+                </div>
+            </div>
+
+<!-- Input element for username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">face</i>
+                    <input id="username" name="username" type="text" pattern="^[a-zA-Z0-9]{4,20}$" class="validate"
+                        placeholder="username, 4-20 alphanumeric characters allowed" required>
+                    <label for="username">Username</label>
+                </div>
+            </div>
+
+<!-- Input element for password -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">lock</i>
+                    <input id="password" name="password" type="password" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="password">Password</label>
+                </div>
+            </div>
+
+<!-- Input element to confirm password -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix orange-text text-darken-3">lock</i>
+                    <input id="confirm_password" name="confirm_password" type="password" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="confirm_password">Confirm Password</label>
+                </div>
+            </div>
+
+<!-- Submit button for registration -->
+            <div class="row">
+                <button type="submit" class="col s12 btn-large orange darken-3">
+                    Register <i class="material-icons prefix white-text">forward</i>
+                </button>
+            </div>
         </div>
+    </form>
+</div>
+
+<div class="row">
+    <div class="col s12">
+        <p class="center-align">
+            Already Registered?
+            <a href="{{ url_for('login') }}" class="orange-text text-darken-4">Log In</a>
+        </p>
     </div>
+</div>
 
 {% endblock %}
